force-app/main/default/objects/Avion__c/Avion__c.object-meta.xml
<CustomObject>
    <description>Aeronave que sobrevuela los cielos transportando pasajeros o carga</description>
    <label>Avion</label>
    <nameField>
        <displayFormat>AV-{00000}</displayFormat>
        <label>Número de Avion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aviones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>