force-app/main/default/objects/Avion__c/fields/Numero_de_pasajeros_Clase_Turista__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pasajeros_Clase_Turista__c</fullName>
    <description>Cantidad de pasajeros de clase turista</description>
    <label>Numero de pasajeros Clase Turista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>