force-app/main/default/objects/Avion__c/fields/Numero_de_pasajeros_negocios__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pasajeros_negocios__c</fullName>
    <description>Cantidad de pasajeros de clase negocios</description>
    <label>Numero de pasajeros Clase Negocios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>