force-app/main/default/objects/Avion__c/fields/Solo_Carga__c.field-meta.xml
<CustomField>
    <fullName>Solo_Carga__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si un avión es de soo carga o tambien de pasajeros</description>
    <label>¿Solo Carga?</label>
    <type>Checkbox</type>
</CustomField>