force-app/main/default/objects/Avion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Indica que tipo de avión es, si de pasajeros o carga</description>
    <label>Tipo</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>