force-app/main/default/objects/Avion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Solo_Carga__c</columns>
    <columns>Viajes_Internacionales__c</columns>
    <columns>Viajes_Nacionales__c</columns>
    <columns>Activo__c</columns>
    <columns>Numero_de_pasajeros_negocios__c</columns>
    <columns>Numero_de_pasajeros_Clase_Turista__c</columns>
    <columns>Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>