force-app/main/default/objects/Avion__c/listViews/Solo_Carga.listView-meta.xml
<ListView>
    <fullName>Solo_Carga</fullName>
    <columns>NAME</columns>
    <columns>Viajes_Internacionales__c</columns>
    <columns>Viajes_Nacionales__c</columns>
    <columns>Tipo__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Solo_Carga__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Solo Carga</label>
</ListView>